# spde_practical

./: .gitignore  .pre-commit-config.yaml  README.md  a_matern.ipynb  b_non_conditional_simulations.ipynb  c_working_with_precision_matrix.ipynb  d_anisotropies.ipynb  setup.cfg  spde.py  spde_practical.ipynb  spde_practical2.ipynb  test_spde.py
