[metadata]
name = spde
version = attr: spde.__version__
author = attr: spde.__author__
author_email = antoinecollet5@gmail.com
description = Spatial SPDE written in Python.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
url = https://gitlab.com/spde/spde
keywords = SPDE
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    importlib_metadata
    numpy
zip_safe = False
include_package_data = True

[bdist_wheel]
universal = 1

[flake8]
exclude = .git,__pycache__,build,dist,docs,examples
max-line-length = 88
ignore =
    # whitespace before ':'
    E203,
    # line break before binary operator
    W503,
    # line length too long
    E501,
    # do not assign a lambda expression, use a def
    E731,
    # ambiguous variable name
    E741,
    # Double quotes found but single quotes preferred
    Q000, 
    # Black would make changes
    BLK100,

[aliases]
# Define setup.py command aliases here
test = pytest

[codespell]
skip = *.pyc,*.gif,*.png,*.jpg,*.ply, ./bibliography.bib,*.ipynb
ignore-words-list = lod,byteorder,flem,parm,doubleclick,revered,inout,fro,nd,sies
quiet-level = 3

[tool.isort]
profile = "black"

[pylint.LOGGING]
# Format style used to check logging format string. `old` means using %
# formatting, `new` is for `{}` formatting,and `fstr` is for f-strings.
logging-format-style=fstr
